--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,8 +9,8 @@
 
     <style name="Theme.APISplashScreen" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/orchid</item>
-        <item name="windowSplashScreenAnimatedIcon">@mipmap/rfid_icon</item>
-        <item name="windowSplashScreenAnimationDuration">1000</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/icon_rfid</item>
+        <item name="windowSplashScreenAnimationDuration">2000</item>
         <item name="postSplashScreenTheme">@style/Base.Theme.Rfid_integrated_system_app</item>
     </style>
 </resources>
