Commit with addUser and visualizaterUser-registeredUser Fragment

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -48,11 +48,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/EditTextRepPassword"
+            android:id="@+id/EditTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            app:endIconMode="password_toggle"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -67,11 +68,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/EditTextPassword"
+            android:id="@+id/EditTextRepPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/passwordRep"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            app:endIconMode="password_toggle"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
