--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,15 +8,25 @@
         android:id="@+id/navigation_active_user"
         android:name="com.example.rfid_integrated_system_app.ui.active_user.ActiveUserFragment"
         android:label="@string/active_user"
-        tools:layout="@layout/fragment_active_user" />
+        tools:layout="@layout/fragment_active_user" >
+    </fragment>
     <fragment
         android:id="@+id/navigation_registered_user"
         android:name="com.example.rfid_integrated_system_app.ui.registered_user.RegisteredUserFragment"
         android:label="@string/registered_user"
-        tools:layout="@layout/fragment_registered_user" />
+        tools:layout="@layout/fragment_registered_user" >
+        <action
+            android:id="@+id/action_navigation_registered_user_to_navigation_add_user"
+            app:destination="@id/navigation_add_user" />
+    </fragment>
     <fragment
         android:id="@+id/navigation_door_control"
         android:name="com.example.rfid_integrated_system_app.ui.door_control.DoorControlFragment"
         android:label="@string/door_control"
         tools:layout="@layout/fragment_door_control" />
+    <fragment
+        android:id="@+id/navigation_add_user"
+        android:name="com.example.rfid_integrated_system_app.ui.add_user.AddUserFragment"
+        android:label="@string/buttonAddUser"
+        tools:layout="@layout/fragment_add_user" />
 </navigation>
