--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,9 +8,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="182dp"
-        android:layout_height="195dp"
-        android:layout_marginTop="68dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,8 @@
             android:layout_marginTop="52dp"
             android:text="@string/Login"
             android:layout_weight="1"
-            android:layout_marginStart="5dp"/>
+            android:layout_marginStart="5dp"
+            android:textColor="@color/whitesmoke"/>
 
         <Button
             android:id="@+id/buttonRegister"
@@ -78,7 +79,8 @@
             android:layout_marginTop="52dp"
             android:text="@string/Register"
             android:layout_weight="1"
-            android:layout_marginStart="5dp"/>
+            android:layout_marginStart="5dp"
+            android:textColor="@color/whitesmoke"/>
     </LinearLayout>
 
 
