--- a/app/src/main/res/layout/fragment_registered_user.xml
+++ b/app/src/main/res/layout/fragment_registered_user.xml
@@ -14,7 +14,8 @@
         android:layout_marginBottom="10dp"
         android:src="@drawable/add_user_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="@color/GreenU1"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerViewUserRegistered"
