--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+
     <item
         android:id="@+id/navigation_active_user"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/user_active"
         android:title="@string/active_user" />
 
     <item
         android:id="@+id/navigation_registered_user"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/user_registered"
         android:title="@string/registered_user" />
 
     <item
         android:id="@+id/navigation_door_control"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/door_open"
         android:title="@string/door_control" />
 
 </menu>
