--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,16 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Rfid_integrated_system_app" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
-        <item name="colorPrimary">@color/orchid</item>
+        <item name="colorPrimary">@color/GreenU1</item>
     </style>
 
     <style name="Theme.Rfid_integrated_system_app" parent="Base.Theme.Rfid_integrated_system_app" />
 
     <style name="Theme.APISplashScreen" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/orchid</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/icon_rfid</item>
+        <item name="windowSplashScreenBackground">@color/black</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/icon_app</item>
         <item name="windowSplashScreenAnimationDuration">2000</item>
         <item name="postSplashScreenTheme">@style/Base.Theme.Rfid_integrated_system_app</item>
+        <item name="splashScreenIconSize">1dp</item>
     </style>
 </resources>
