commit con toma de foto de usuario a registrar y seteo de esta en usuarios registrados y en usuarios activos.

--- a/app/src/main/res/layout/card_view_active_user.xml
+++ b/app/src/main/res/layout/card_view_active_user.xml
@@ -26,7 +26,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/user_active"
-            android:background="@color/GreenU1"/>
+            android:background="@drawable/rounded_background" />/>
 
     <TextView
         android:id="@+id/textViewNameUser"
