--- a/app/src/main/res/layout/card_view_user_registered.xml
+++ b/app/src/main/res/layout/card_view_user_registered.xml
@@ -17,8 +17,8 @@
 
         <ImageView
             android:id="@+id/ImageViewPhotoUser"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
@@ -26,13 +26,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/user_registered"
-            android:background="@color/GreenU1"/>
+            android:background="@drawable/rounded_background" />
 
     <TextView
         android:id="@+id/textViewFirstName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="90dp"
         android:layout_marginTop="53dp"
         android:layout_marginEnd="121dp"
         android:text="@string/firstName"
@@ -48,7 +48,7 @@
         android:id="@+id/textViewLastName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="90dp"
         android:layout_marginTop="23dp"
         android:layout_marginEnd="121dp"
         android:text="@string/lastName"
@@ -64,7 +64,7 @@
         android:id="@+id/textViewPosition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="53dp"
+        android:layout_marginStart="90dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="116dp"
         android:text="@string/CargoRol"
