--- a/app/src/main/res/layout/card_view_user_registered.xml
+++ b/app/src/main/res/layout/card_view_user_registered.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/thistle">
+        android:background="#424242">
 
         <ImageView
             android:id="@+id/ImageViewPhotoUser"
@@ -25,8 +25,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/user_registered"
-            android:background="@drawable/rounded_background" />
+            app:srcCompat="@drawable/user_registered" />
 
     <TextView
         android:id="@+id/textViewFirstName"
@@ -39,23 +38,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ImageViewPhotoUser"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:gravity="center_horizontal"/>
-
-    <TextView
-        android:id="@+id/textViewLastName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="121dp"
-        android:text="@string/lastName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ImageViewPhotoUser"
-        app:layout_constraintTop_toBottomOf="@+id/textViewFirstName"
-        android:textColor="@color/black"
+        android:textColor="@color/GreenU1"
         android:textStyle="bold"
         android:textSize="20dp"
         android:gravity="center_horizontal"/>
@@ -70,8 +53,8 @@
         android:text="@string/CargoRol"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ImageViewPhotoUser"
-        app:layout_constraintTop_toBottomOf="@+id/textViewLastName"
-        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/textViewFirstName"
+        android:textColor="@color/GreenU1"
         android:textStyle="bold"
         android:textSize="20dp"
         android:gravity="center_horizontal"/>
