--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,26 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.register.RegisterActivity">
 
-
-    <ImageView
-        android:id="@+id/ImageViewRegister"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:contentDescription="@null"
-        android:src="@drawable/register_icon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/TextInputLayoutFirstName"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/ImageViewRegister">
+        app:helperText="@string/helper_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/TextInputEditTextFirstName"
@@ -41,7 +31,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutFirstName">
+        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutFirstName"
+        app:helperText="@string/helper_text">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/TextInputEditTextLastName"
@@ -59,7 +50,8 @@
         android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutLastName">
+        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutLastName"
+        app:helperText="@string/helper_text">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/EditTextEmail"
@@ -78,7 +70,8 @@
         android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
+        app:helperText="@string/helper_text">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/EditTextPassword"
@@ -98,7 +91,8 @@
         android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword">
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
+        app:helperText="@string/helper_text">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/EditTextRepPassword"
@@ -146,7 +140,7 @@
         android:id="@+id/buttonRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="12dp"
         android:text="@string/Register"
         android:layout_weight="1"
         android:layout_marginStart="5dp"
